# api/app/Http/Controllers/Auth/TwoFactorSecretKeyController.php
@@ -11,9 +11,11 @@ use Laravel\Fortify\Fortify;
 
 final class TwoFactorSecretKeyController extends Controller
 {
+    /**
+     * @response array{data: array{secretKey: string}}
+     */
     public function show(Request $request): JsonResponse
     {
-
         $user = $request->user();
 
         if ($user->two_factor_secret === null) {
